{
    "name": "MyActions",
    "maps": [
        {
            "name": "InGame",
            "id": "fd9382db-a5ba-429a-b4c7-8ceaa0d36a10",
            "actions": [
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "b4e225b3-10c9-4103-a6c5-9411977ea7d8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "a271a881-654d-49f2-a704-8ab6f31d5035",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerCharacter",
                    "type": "Button",
                    "id": "5d868e31-595e-4802-99e0-66b9613faa4a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "22980dcb-2838-41df-a0b7-b425f755258a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00c265fe-e65f-433d-aaf1-885e9f85319d",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95b8cf52-28e1-48be-8e07-9d6deee54867",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f493831f-c731-44f9-b93e-dc6e7f29418e",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a43207e7-0470-4bfb-b051-0fec0b5899ba",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b2f84be-c52f-453f-8a0b-3267df8312a3",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "6d8cc8c2-a7e8-4ecd-a3d9-d638f1281b85",
            "actions": [
                {
                    "name": "FastenTimeLimit",
                    "type": "Button",
                    "id": "e38f95d0-2de3-475e-81e8-6ed72eac6b2c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "399e9ac2-0068-480c-afe7-0dc85b9950f7",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FastenTimeLimit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}